--- a/dogs.html
+++ b/dogs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Adoptadog Dogs</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -239,6 +240,7 @@
       </nav>
       <p>&copy; 2018 Adoptadog, LLC&emsp;|&emsp;Seattle, WA</p>
     </footer>
+    <script src="main.js"></script>
     <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
